--- a/plugin/pango/CMakeLists.txt
+++ b/plugin/pango/CMakeLists.txt
@@ -28,6 +28,7 @@ target_include_directories(gvplugin_pango PRIVATE
 
 target_link_libraries(gvplugin_pango
     gvc
+    common_obj
     ${Cairo_LINK_LIBRARIES}
     ${PangoCairo_LINK_LIBRARIES}
 )
